# hsmc

./: .build.yml  .gitignore  .hgignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  TODO  hsmc.sln  hsmc.vcproj  hsmc.vpj  hsmc.vpw  justfile  mise.toml
.config/: nextest.toml
docs/: 000. original-hsmc-spec.md  001. hsmc-design-change-request.md  002. hsmc-semantics-formal.md  003. latency-analysis.md  004. unsafe-safety-contract.md  doc.aux  doc.bbl  doc.bib  doc.blg  doc.dvi  doc.idx  doc.ilg  doc.ind  doc.lol  doc.lyx  doc.out  doc.tex  doc.toc
example/parsetest/: parsetest.hsm
example/traffic/: main.cpp  traffic.hsm
hsmc/: Cargo.toml
hsmc-macros/: Cargo.toml
hsmc-macros/src/: codegen.rs  ir.rs  lib.rs  parse.rs  validate.rs
hsmc-macros/tests/: ui.rs
hsmc-macros/tests/ui/: t10_1_during_duplicate_field.rs  t10_1_during_duplicate_field.stderr  t10_2_during_overlap_same_state.rs  t10_2_during_overlap_same_state.stderr  t9_1_duplicate_transition.rs  t9_1_duplicate_transition.stderr  t9_2_missing_default.rs  t9_2_missing_default.stderr  t9_3_terminate_in_child.rs  t9_3_terminate_in_child.stderr  t9_4_default_non_child.rs  t9_4_default_non_child.stderr  t9_4_default_self_cycle.rs  t9_4_default_self_cycle.stderr  t9_5_default_childless.rs  t9_5_default_childless.stderr  t9_5_default_two_cycle.rs  t9_5_default_two_cycle.stderr  t9_6_empty_state.rs  t9_6_empty_state.stderr  t9_7_duplicate_default.rs  t9_7_duplicate_default.stderr  t9_8_unknown_target.rs  t9_8_unknown_target.stderr  t9_9_multiple_terminate.rs  t9_9_multiple_terminate.stderr
hsmc-macros/tests/ui_pass/: composite_without_default.rs  default_targets_ancestor.rs  default_targets_sibling.rs  nested_states_parse.rs
hsmc/benches/: baseline.txt  dispatch.rs
hsmc/examples/: during_radio.rs  embassy_full.rs  microwave.rs  microwave_tui.rs
hsmc/src/: error.rs  journal.rs  lib.rs
hsmc/tests/: behavior.rs  det_bubbling.rs  det_current_state.rs  det_default_ancestor.rs  det_default_chained.rs  det_default_sibling.rs  det_descent.rs  det_during.rs  det_emit.rs  det_emit_during_transition.rs  det_initial.rs  det_lateral.rs  det_optional_default.rs  det_ordering.rs  det_root_target.rs  det_self.rs  det_self_composite.rs  det_step_dispatch.rs  det_termination.rs  det_timers.rs  det_timers_parent.rs  det_up.rs  dispatch_drain.rs  during_basic.rs  during_cancel.rs  during_concurrent.rs  during_hierarchical.rs  journal_dump.rs  journal_replay.rs  journal_replay_emit.rs  journal_replay_timer.rs  journal_smoke.rs  state_chart_const.rs  state_chart_preview.rs  timer_only.rs  tokio_async_actions.rs  tokio_nested_alternation.rs  tokio_repeat_and_payload.rs  tokio_run.rs  trace_format.rs
source/: Makefile  autofile.h  config.h  getopt.cpp  getopt.h  hsm-lexer.c  hsm-parser.tab.c  hsm-parser.tab.h  hsm.l  hsm.y  hsmc.dev  machine.h  main.cpp  main.h  state.h
verification/: Cargo.toml  INVARIANTS.md  mise.toml  requirements.txt
verification/src/: event_queue.rs  lib.rs  paths.rs  timer_table.rs
verification/tests/: correspondence_event_queue.rs  correspondence_paths.rs  correspondence_timer_table.rs
